# df-verify

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
clients/csharp/: AwarenessClient.cs
clients/js/: .gitignore  README.md  cli.js  index.d.ts  index.js  package.json
clients/python/: README.md  pyproject.toml
clients/python/dynamicfeed_verify/: __init__.py  __main__.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs  main.rs
clients/rust/tests/: conformance.rs
examples/live-data-integrity/: README.md  report.py  results.json
examples/openai/: README.md  grounding_on_verifiable_live_data.ipynb
examples/verified-agent/: README.md  agent.py
reliability/: README.md  a2a-artifact-vectors.json  conformance-vectors.json  mcp-extension-reference.md  okf-reliability-v1.schema.json  verify_reliability.js  verify_reliability.py
reliability/examples/: okf-reliability-examples.json
tests/: verify_vectors.mjs  verify_vectors.py
tests/vectors/: README.md  canonicalization.json  signed-awareness.json
