[package]
name = "dynamicfeed-verify"
version = "1.0.0"
edition = "2021"
description = "Independently verify Dynamic Feed (DF-VERIFY/1) Ed25519-signed responses. No account, no runtime trust in the issuer."
license = "MIT"
readme = "README.md"
homepage = "https://dynamicfeed.ai/standard"
repository = "https://github.com/dynamicfeed/df-verify"
keywords = ["ed25519", "signature", "verification", "provenance", "ai"]
categories = ["cryptography", "command-line-utilities"]

[lib]
name = "dynamicfeed_verify"
path = "src/lib.rs"

[[bin]]
name = "dynamicfeed-verify"
path = "src/main.rs"

[dependencies]
serde_json = { version = "1", features = ["arbitrary_precision"] }
ed25519-dalek = "2"
base64 = "0.22"
